--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"></link>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <title>Document</title>
 </head>
 <body>
@@ -71,7 +74,7 @@
             Merci d'avoir choisi Tunidiscount pour nos services. Services Après Vente: Garantie 1 an.
         </div>
         <div class="table-container">
-            <table>
+            <table class="table">
                 <thead>
                     <th>Description</th>
                     <th>Quantité</th>
@@ -133,7 +136,7 @@
             </p>
         </div>
         <div class="right">
-            <h4>Siège social</h4>
+            <h4>Coordonnées</h4>
             <p>
                 <small>Tunidiscount</small>
                 <small>Téléphone: +216 58 066 921</small>
